新增部分功能代码

--- a/tools/src/main/res/layout/activity_main.xml
+++ b/tools/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/test"
-        android:onClick="clicl"
+        android:onClick="click"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"  />
